# universe

./: .gitignore  .gitlab-ci.yml  .gitmodules  AbstractUniverseIntensionConstraintFactory_8cpp.html  AbstractUniverseIntensionConstraintFactory_8cpp_source.html  AbstractUniverseIntensionConstraintFactory_8hpp.html  AbstractUniverseIntensionConstraintFactory_8hpp_source.html  BUILDING.md  CMakeLists.txt  CMakePresets.json  Doxyfile.in  HACKING.md  IOptimizationSolver_8hpp.html  IOptimizationSolver_8hpp_source.html  IUniverseConfigurableSolver_8hpp.html  IUniverseConfigurableSolver_8hpp_source.html  IUniverseConstraint_8hpp.html  IUniverseConstraint_8hpp_source.html  IUniverseCspSolver_8hpp.html  IUniverseCspSolver_8hpp_source.html  IUniverseDomain_8hpp.html  IUniverseDomain_8hpp_source.html  IUniverseIntensionConstraintVisitor_8hpp.html  IUniverseIntensionConstraintVisitor_8hpp_source.html  IUniverseIntensionConstraint_8hpp.html  IUniverseIntensionConstraint_8hpp_source.html  IUniverseProblem_8hpp.html  IUniverseProblem_8hpp_source.html  IUniversePseudoBooleanSolver_8hpp.html  IUniversePseudoBooleanSolver_8hpp_source.html  IUniverseSatSolver_8cpp.html  IUniverseSatSolver_8cpp_source.html  IUniverseSatSolver_8hpp.html  IUniverseSatSolver_8hpp_source.html  IUniverseSearchListener_8cpp.html  IUniverseSearchListener_8cpp_source.html  IUniverseSearchListener_8hpp.html  IUniverseSearchListener_8hpp_source.html  IUniverseSolverFactory_8hpp.html  IUniverseSolverFactory_8hpp_source.html  (+377 more)
.github/workflows/: ci.yml  cmake.yml  cmake_windows.yml  plantuml.yml  publish-doc.yml
apps/: main.cpp
cmake/: install-config.cmake  install-rules.cmake  prelude.cmake  variables.cmake
doc/: CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  INDEX.md
doc/diagrams/: factory.plantuml  solverinterface.plantuml
html/: IOptimizationSolver_8hpp_source.html  IUniverseDomain_8hpp.html  IUniverseDomain_8hpp_source.html  IUniverseIntensionConstraintVisitor_8hpp.html  IUniverseIntensionConstraint_8hpp.html  IUniverseIntensionConstraint_8hpp_source.html  IUniverseProblem_8hpp_source.html  IUniversePseudoBooleanSolver_8hpp_source.html  IUniverseSatSolver_8cpp.html  IUniverseSatSolver_8cpp_source.html  IUniverseSolverFactory_8hpp.html  IUniverseSolver_8cpp_source.html  IUniverseSolver_8hpp.html  IUniverseSolver_8hpp_source.html  IUniverseVariable_8hpp.html  IUniverseVariable_8hpp_source.html  JavaIterator_8cpp_source.html  JavaIterator_8hpp.html  JavaIterator_8hpp_source.html  JavaList_8cpp.html  JavaList_8cpp_source.html  JavaList_8hpp.html  JavaMapOfString_8cpp.html  JavaMapOfString_8cpp_source.html  JavaMapOfString_8hpp.html  JavaMapOfString_8hpp_source.html  JavaOptimizationSolver_8cpp_source.html  JavaOptimizationSolver_8hpp_source.html  UniverseArithmeticOperator_8hpp.html  UniverseArithmeticOperator_8hpp.js  UniverseAssumption_8hpp.html  UniverseBinaryIntensionConstraint_8hpp_source.html  UniverseBooleanOperator_8hpp.js  UniverseBooleanOperator_8hpp_source.html  UniverseContradictionException_8hpp_source.html  UniverseIfThenElseIntensionConstraint_8cpp.html  UniverseIntensionConstraintFactory_8hpp_source.html  UniverseJavaCspSolver_8hpp_source.html  UniverseJavaDomain_8cpp.html  UniverseJavaDomain_8hpp.html  (+110 more)
html/search/: all_0.js  all_1.js  all_12.js  all_15.js  all_16.js  all_2.js  all_6.js  all_7.js  all_b.js  classes_1.js  classes_2.js  classes_3.js  enumvalues_7.js  enumvalues_8.js  enumvalues_b.js  files_1.js  functions_0.js  functions_10.js  functions_11.js  functions_12.js  functions_2.js  functions_4.js  functions_6.js  functions_8.js  functions_b.js  functions_d.js  functions_f.js  pages_0.js  variables_0.js
latex/: AbstractUniverseIntensionConstraintFactory_8cpp.tex  AbstractUniverseIntensionConstraintFactory_8hpp.tex  IOptimizationSolver_8hpp.tex  IUniverseConstraint_8hpp.tex  IUniverseCspSolver_8hpp.tex  IUniverseDomain_8hpp.tex  IUniverseIntensionConstraintVisitor_8hpp.tex  IUniverseIntensionConstraint_8hpp.tex  IUniverseProblem_8hpp.tex  IUniversePseudoBooleanSolver_8hpp.tex  IUniverseSatSolver_8cpp.tex  IUniverseSatSolver_8hpp.tex  IUniverseSolverFactory_8hpp.tex  IUniverseSolver_8cpp.tex  IUniverseSolver_8hpp.tex  IUniverseVariable_8hpp.tex  JavaBigInteger_8cpp.tex  JavaBigInteger_8hpp.tex  JavaIterator_8cpp.tex  JavaIterator_8hpp.tex  JavaList_8cpp.tex  JavaList_8hpp.tex  JavaMapOfString_8cpp.tex  JavaMapOfString_8hpp.tex  JavaOptimizationSolver_8hpp.tex  UniverseArithmeticOperator_8hpp.tex  UniverseAssumption_8hpp.tex  UniverseBinaryIntensionConstraint_8cpp.tex  UniverseBinaryIntensionConstraint_8hpp.tex  UniverseBooleanOperator_8hpp.tex  UniverseContradictionException_8cpp.tex  UniverseContradictionException_8hpp.tex  UniverseIfThenElseIntensionConstraint_8cpp.tex  UniverseIfThenElseIntensionConstraint_8hpp.tex  UniverseIntensionConstraintFactory_8hpp.tex  UniverseJavaCspSolver_8cpp.tex  UniverseJavaCspSolver_8hpp.tex  UniverseJavaDomain_8cpp.tex  UniverseJavaDomain_8hpp.tex  UniverseJavaIntensionConstraintFactory_8cpp.tex  (+93 more)
libs/: CMakeLists.txt
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  enumvalues_9.js  enumvalues_a.js  enumvalues_b.js  (+36 more)
source/config/: UniverseConfiguration.cpp
source/core/: IUniverseSolver.cpp  UniverseContradictionException.cpp  UniverseJavaSolver.cpp  UniverseType.cpp
source/csp/: UniverseJavaCspSolver.cpp  UniverseTransition.cpp
source/java/: JavaBigInteger.cpp  JavaIterator.cpp  JavaList.cpp  JavaMapOfString.cpp
source/listener/: IUniverseSearchListener.cpp  UniverseJavaSearchListener.cpp
source/optim/: JavaOptimizationSolver.cpp
source/pb/: UniverseJavaPseudoBooleanSolver.cpp
source/sat/: IUniverseSatSolver.cpp  (+1 more)
(+136 files in other folders)
