message(STATUS "Dependencies configuration start")
MACRO(SUBDIRLIST result curdir)
    FILE(GLOB children RELATIVE ${curdir} ${curdir}/*)
    SET(dirlist "")
    FOREACH(child ${children})
        IF(IS_DIRECTORY ${curdir}/${child})
            LIST(APPEND dirlist ${child})
        ENDIF()
    ENDFOREACH()
    SET(${result} ${dirlist})
ENDMACRO()

SUBDIRLIST(SUBDIRS ${CMAKE_CURRENT_SOURCE_DIR})

FOREACH(submodule ${SUBDIRS})
    if(NOT EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${submodule}/CMakeLists.txt")
        message(FATAL_ERROR "The file CMakeLists for submodule ${submodule} not exists.")
    else()
        add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/${submodule})
        message(STATUS "Dependencies ${submodule} is added.")
    endif()
ENDFOREACH()

message(STATUS "Dependencies configuration end")